2eme depot ohmyfood

--- a/index.html
+++ b/index.html
@@ -16,13 +16,21 @@
 </head>
 
 <body>
-    <header>
-<h1>ohmyfood</h1>
-<h2>Réservez le menu qui vous convient</h2>
+    <header class="entete">
+        <h1 class="entete__titre">ohmyfood</h1>
+        <div class="entete__localisation">
+                <img src="images/logo/gps.svg" alt="logo gps">
+                <p class="text-16-medium">Paris, Belleville</p>
+            </div>
+        </div>
     </header>
-
     <main>
-
+        <div class="entete_restaurants">
+            <h2 class="entete_restaurant__titre">Réservez le menu qui vous convient</h2>
+            <p class="text-18-ligth">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+            <a class="button text-16-medium buttonHighlight"
+            href="#Nos_restaurants">Explorer nos restaurants</a>
+        </div>
     </main>
     <footer>
     </footer>
