ohmyffod ajout coeur hover hover::after

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">La note enchantée</h3>
                                 <p class="carte_restaurant_bas__lieu">Charonne</p>
+                                <div class="carte_restaurant_bas__coeur">
+                                    <i class="fa-regular fa-heart carte_restaurant_bas__coeur--vide"></i>
+                                    <i class="fa-solid fa-heart carte_restaurant_bas__coeur--plein"></i>
+                                </div>
                             </div>
                         </article>
                     </a>
@@ -94,6 +98,10 @@
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">À la française</h3>
                                 <p class="carte_restaurant_bas__lieu">Cité Rouge</p>
+                                <div class="carte_restaurant_bas__coeur">
+                                    <i class="fa-regular fa-heart carte_restaurant_bas__coeur--vide"></i>
+                                    <i class="fa-solid fa-heart carte_restaurant_bas__coeur--plein"></i>
+                                </div>
                             </div>
                         </article>
                     </a>
@@ -103,6 +111,10 @@
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">Le délice des sens</h3>
                                 <p class="carte_restaurant_bas__lieu">Folie-Méricourt</p>
+                                <div class="carte_restaurant_bas__coeur">
+                                    <i class="fa-regular fa-heart carte_restaurant_bas__coeur--vide"></i>
+                                    <i class="fa-solid fa-heart carte_restaurant_bas__coeur--plein"></i>
+                                </div>
                             </div>
                         </article>
                     </a>
