ohmyffod accueil-ok

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="text" placeholder="Paris, Belleville" class="localisation__input">
         </form>
         <div class="entete_restaurants">
-            <h1 class="entete_restaurant__titre">Réservez le menu qui vous convient</h1>
+            <h2 class="entete_restaurant__titre">Réservez le menu qui vous convient</h2>
             <p class="text-18-ligth">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
             <a class="bouton__explorez text-16-medium" href="#Nos_restaurants">Explorer nos restaurants</a>
         </div>
@@ -123,6 +123,21 @@
         </div>
     </main>
     <footer>
+        <div class="footer_bloc">
+            <h1 class="footer__titre">ohmyfood</h1>
+            <div class="footer__mentions">
+                <a class="footer__lien" href="">
+                    <i class="fa-solid fa-utensils fa-sm footer__lien__icone"></i>
+                    <p class="footer__lien__texte">Proposer un restaurant</p>
+                </a>
+                <a class="footer__lien" href="">
+                    <i class="fa-solid fa-handshake-angle fa-xs footer__lien__icone"></i>
+                    <p class="footer__lien__texte">Devenez partenaire</p>
+                </a>
+                <a class="footer__lien" href="">Mentions légales</a>
+                <a class="footer__lien" href="mailto:ohmyfood@gmail.com">Contact</a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
