--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
+    <div class="contain_loader">
+        <div class="loader">
+            <div class="tour-eiffel"><img src="images/logo/tour-eiffel.png" class="tour-eiffel"></div>
+        </div>
+    </div>
+<!-- ENTETE -->
     <header class="entete">
         <img class="entete__logo" src="images/logo/ohmyfood.png" alt="Logo OhMyFood">
     </header>
