ohmyffod accueil-responsive

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="bouton__explorez text-16-medium" href="#Nos_restaurants">Explorer nos restaurants</a>
         </div>
 <!--***** BLOC FONCTIONNEMENT ***** -->
-<div class="fonctionnement">
+        <div class="fonctionnement">
             <div>
                 <h2 class="fonctionnement__titre">Fonctionnement</h2>
             </div>
@@ -99,6 +99,8 @@
                             <i class="fa-solid fa-heart carte_restaurant_bas__coeur--plein"></i>
                         </div>
                     </article>
+                </div>
+                <div class="section_restaurants_cartes">
                     <article class="carte_restaurant">
                         <a class=".section_restaurants_cartes__lien" href="#">
                             <img class="carte_restaurant__image"src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'un plat du restaurant à la française">
@@ -141,7 +143,7 @@
                     <i class="fa-solid fa-handshake-angle fa-xs footer__lien__icone"></i>
                     <p class="footer__lien__texte">Devenez partenaire</p>
                 </a>
-                <a class="footer__lien" href="">Mentions légales</a>
+                <a class="footer__lien footer__txt_ss_logo" href="">Mentions légales</a>
                 <a class="footer__lien" href="mailto:avotreecoute@ohmyfood.fr">Contact</a>
             </div>
         </div>
