ohmyffod accueil-responsive et loader OK

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 </head>
 <body>
     <div class="contain_loader">
-        <div class="loader">
-            <div class="tour-eiffel"><img src="images/logo/tour-eiffel.png" class="tour-eiffel"></div>
-        </div>
+        <div class="loader"></div>
+        <div class="tour-eiffel"><img src="images/logo/tour-eiffel.png" class="tour-eiffel"></div>
     </div>
 <!-- ENTETE -->
     <header class="entete">
