ohmyffod accueil-responsive et loader

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
         <div class="tour-eiffel"><img src="images/logo/tour-eiffel.png" class="tour-eiffel"></div>
     </div>
 <!-- ENTETE -->
-    <header class="entete">
-        <img class="entete__logo" src="images/logo/ohmyfood.png" alt="Logo OhMyFood">
+    <header>
+        <nav class="navbar">
+            <a href="../index.html" class="navbar__bouton-retour hide_page_index"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
+            <img class="entete__logo" src="images/logo/ohmyfood.png" alt="Logo OhMyFood">
+        </nav>
     </header>
     <main>
         <form class="localisation" autocomplete="off">
