ohmyffod page-menu-avec-slide-check

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="contain_loader">
-        <div class="loader"></div>
-        <div class="tour-eiffel"><img src="images/logo/tour-eiffel.png" class="tour-eiffel"></div>
-    </div>
+        <div class="contain_loader">
+            <div class="loader"></div>
+            <div class="tour-eiffel"><img src="images/logo/tour-eiffel.png" class="tour-eiffel"></div>
+        </div>
 <!-- ENTETE -->
     <header>
         <nav class="navbar">
@@ -70,11 +70,11 @@
                 <h3 class="section_restaurants__titre">Restaurants</h3>
                 <div class="section_restaurants_cartes">
                     <article class="carte_restaurant">
-                        <a class="carte_restaurant__lien" href="">
+                        <a class="carte_restaurant__lien" href="menu-la-palette-du-gout.html">
                             <div class="carte_restaurant__nouveau">
                                 <p class=>Nouveau</p>
                             </div>
-                                <img class="carte_restaurant__image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'un plat du restaurant la palette du gout">
+                            <img class="carte_restaurant__image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'un plat du restaurant la palette du gout">
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">La palette du goût</h3>
                                 <p class="carte_restaurant_bas__lieu">Ménilmontant</p>
@@ -86,7 +86,7 @@
                         </div>
                     </article>
                     <article class="carte_restaurant">
-                        <a class=".section_restaurants_cartes__lien" href="#">
+                        <a class=".section_restaurants_cartes__lien" href="menu-la-note-enchantee.html">
                             <div class="carte_restaurant__nouveau">
                                 <p class=>Nouveau</p>
                             </div>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="section_restaurants_cartes">
                     <article class="carte_restaurant">
-                        <a class=".section_restaurants_cartes__lien" href="#">
+                        <a class=".section_restaurants_cartes__lien" href="menu-a-la-française.html">
                             <img class="carte_restaurant__image"src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'un plat du restaurant à la française">
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">À la française</h3>
@@ -117,7 +117,7 @@
                         </div>
                     </article>
                     <article class="carte_restaurant">
-                        <a class=".section_restaurants_cartes__lien" href="#">
+                        <a class=".section_restaurants_cartes__lien" href="menu-delice-des-sens.html">
                             <img class="carte_restaurant__image" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'un plat du restaurant le délice des sens">
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">Le délice des sens</h3>
