--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -25,62 +25,168 @@
         <div class="menu">
                 <img class="menu__image_plat_restaurant" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'un plat du restaurant la palette du gout">
                 <div class="menu_titre">
-                    <h1 class="menu_texte__titre">La palette du goût</h1>
+                    <h1 class="menu_nom_restaurant">La palette du goût</h1>
                     <div class="menu_haut__coeur">
                         <i class="fa-regular fa-heart menu__coeur--vide"></i>
                         <i class="fa-solid fa-heart menu__coeur--plein"></i>
                     </div>
                 </div>
-                <div class="carte_menu">
-                    <section class="carte_entrees">
-                        <div class="carte_menu__sous-titre text-16-ligth">
+                <div class="menu-entrees-plats-desserts">
+                    <section class="menu_entrees">
+                        <div class="section_menu__sous-titre text-16-ligth">
                             <p>Entrées</p>
                         </div>
-                        <article class="bouton_plat">
-                            <div class="bouton_plat_bloc">
-                                <div class="bouton_plat_infos">
-                                    <div class="bouton_plat_titre">
+                        <article class="section_menu__bouton_plat">
+                            <div class="bouton_plat__bloc">
+                                <div class="bouton_plat__infos">
+                                    <div class="bouton_plat__titre">
                                         <h4>Fricassée d'escargots</h4>
                                     </div>
-                                    <div class="bouton_plat_info_texte">
+                                    <div class="bouton_plat__info_texte">
                                         <p class="text-15-ligth">Au piment d'Espelette</p>
                                         <p class="text-15-bold">25<span class="euro">€</span></p>
                                     </div>
                                 </div>
-                                <div class="bouton_plat_bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat_logo_check"></i>
+                                <div class="bouton_plat__bloc_check">
+                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
                                 </div>
                             </div>
                         </article>
-                        <article class="bouton_plat">
-                            <div class="bouton_plat_bloc">
-                                <div class="bouton_plat_infos">
-                                    <div class="bouton_plat_titre">
+                        <article class="section_menu__bouton_plat">
+                            <div class="bouton_plat__bloc">
+                                <div class="bouton_plat__infos">
+                                    <div class="bouton_plat__titre">
                                         <h4>Foie gras de canard mi-cuit</h4>
                                     </div>
-                                    <div class="bouton_plat_info_texte">
+                                    <div class="bouton_plat__info_texte">
                                         <p class="text-15-ligth">Et ses copeaux de truffe noire</p>
                                         <p class="text-15-bold">35<span class="euro">€</span></p>
                                     </div>
                                 </div>
-                                <div class="bouton_plat_bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat_logo_check"></i>
+                                <div class="bouton_plat__bloc_check">
+                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
                                 </div>
                             </div>
                         </article>
-                        <article class="bouton_plat">
-                            <div class="bouton_plat_bloc">
-                                <div class="bouton_plat_infos">
-                                    <div class="bouton_plat_titre">
+                        <article class="section_menu__bouton_plat">
+                            <div class="bouton_plat__bloc">
+                                <div class="bouton_plat__infos">
+                                    <div class="bouton_plat__titre">
                                         <h4>Œuf au plat</h4>
                                     </div>
-                                    <div class="bouton_plat_info_texte">
+                                    <div class="bouton_plat__info_texte">
                                         <p class="text-15-ligth">Assaisonné à la truffe sur lit de caviar</p>
                                         <p class="text-15-bold">20<span class="euro">€</span></p>
                                     </div>
                                 </div>
-                                <div class="bouton_plat_bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat_logo_check"></i>
+                                <div class="bouton_plat__bloc_check">
+                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
+                                </div>
+                            </div>
+                        </article>
+                    </section>
+                    <section class="menu_plats_principaux">
+                        <div class="section_menu__sous-titre text-16-ligth">
+                            <p>Plats</p>
+                        </div>
+                        <article class="section_menu__bouton_plat">
+                            <div class="bouton_plat__bloc">
+                                <div class="bouton_plat__infos">
+                                    <div class="bouton_plat__titre">
+                                        <h4>Filet de bœuf aux herbes</h4>
+                                    </div>
+                                    <div class="bouton_plat__info_texte">
+                                        <p class="text-15-ligth">Accompagné de sa ribambelle de légumes</p>
+                                        <p class="text-15-bold">40<span class="euro">€</span></p>
+                                    </div>
+                                </div>
+                                <div class="bouton_plat__bloc_check">
+                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="section_menu__bouton_plat">
+                            <div class="bouton_plat__bloc">
+                                <div class="bouton_plat__infos">
+                                    <div class="bouton_plat__titre">
+                                        <h4>Parmentier de queue de bœuf</h4>
+                                    </div>
+                                    <div class="bouton_plat__info_texte">
+                                        <p class="text-15-ligth">À la truffe noire sur sa purée de panais</p>
+                                        <p class="text-15-bold">35<span class="euro">€</span></p>
+                                    </div>
+                                </div>
+                                <div class="bouton_plat__bloc_check">
+                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="section_menu__bouton_plat">
+                            <div class="bouton_plat__bloc">
+                                <div class="bouton_plat__infos">
+                                    <div class="bouton_plat__titre">
+                                        <h4>Filet de turbot</h4>
+                                    </div>
+                                    <div class="bouton_plat__info_texte">
+                                        <p class="text-15-ligth">Aux agrumes</p>
+                                        <p class="text-15-bold">44<span class="euro">€</span></p>
+                                    </div>
+                                </div>
+                                <div class="bouton_plat__bloc_check">
+                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
+                                </div>
+                            </div>
+                        </article>
+                    </section>
+                    <section class="menu_desserts">
+                        <div class="section_menu__sous-titre text-16-ligth">
+                            <p>Desserts</p>
+                        </div>
+                        <article class="section_menu__bouton_plat">
+                            <div class="bouton_plat__bloc">
+                                <div class="bouton_plat__infos">
+                                    <div class="bouton_plat__titre">
+                                        <h4>Paris-Brest</h4>
+                                    </div>
+                                    <div class="bouton_plat__info_texte">
+                                        <p class="text-15-ligth">Revisité</p>
+                                        <p class="text-15-bold">18<span class="euro">€</span></p>
+                                    </div>
+                                </div>
+                                <div class="bouton_plat__bloc_check">
+                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="section_menu__bouton_plat">
+                            <div class="bouton_plat__bloc">
+                                <div class="bouton_plat__infos">
+                                    <div class="bouton_plat__titre">
+                                        <h4>Macaron au chocolat d'exception</h4>
+                                    </div>
+                                    <div class="bouton_plat__info_texte">
+                                        <p class="text-15-ligth">Et glace à la vanille de Madagascar</p>
+                                        <p class="text-15-bold">22<span class="euro">€</span></p>
+                                    </div>
+                                </div>
+                                <div class="bouton_plat__bloc_check">
+                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="section_menu__bouton_plat">
+                            <div class="bouton_plat__bloc">
+                                <div class="bouton_plat__infos">
+                                    <div class="bouton_plat__titre">
+                                        <h4>Mousse au chocolat</h4>
+                                    </div>
+                                    <div class="bouton_plat__info_texte">
+                                        <p class="text-15-ligth">Au piment d'Espelette et à la truffe noire</p>
+                                        <p class="text-15-bold">23<span class="euro">€</span></p>
+                                    </div>
+                                </div>
+                                <div class="bouton_plat__bloc_check">
+                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
                                 </div>
                             </div>
                         </article>
@@ -90,7 +196,7 @@
         </div>
     </main>
     <footer>
-<!--        <div class="footer_bloc">
+        <div class="footer_bloc">
             <h1 class="footer__titre">ohmyfood</h1>
             <div class="footer__mentions">
                 <a class="footer__lien" href="">
@@ -104,7 +210,7 @@
                 <a class="footer__lien footer__txt_ss_logo" href="">Mentions légales</a>
                 <a class="footer__lien" href="mailto:avotreecoute@ohmyfood.fr">Contact</a>
             </div>
-        </div>-->
+        </div>
     </footer>
 </body>
 </html>
