--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -22,175 +22,160 @@
         </nav>
     </header>
     <main>
-        <div class="menu">
+        <div class="bloc_menu">
                 <img class="menu__image_plat_restaurant" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'un plat du restaurant la palette du gout">
-                <div class="menu_titre">
-                    <h1 class="menu_nom_restaurant">La palette du goût</h1>
-                    <div class="menu_haut__coeur">
-                        <i class="fa-regular fa-heart menu__coeur--vide"></i>
-                        <i class="fa-solid fa-heart menu__coeur--plein"></i>
+                <div class="menu">
+                    <div class="menu_titre">
+                        <h1 class="menu_nom_restaurant">La palette du goût</h1>
+                        <div class="menu_haut__coeur">
+                            <i class="fa-regular fa-heart menu__coeur--vide"></i>
+                            <i class="fa-solid fa-heart menu__coeur--plein"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="menu-entrees-plats-desserts">
-                    <section class="menu_entrees">
-                        <div class="section_menu__sous-titre text-16-ligth">
-                            <p>Entrées</p>
-                        </div>
-                        <article class="section_menu__bouton_plat">
-                            <div class="bouton_plat__bloc">
-                                <div class="bouton_plat__infos">
-                                    <div class="bouton_plat__titre">
-                                        <h4>Fricassée d'escargots</h4>
-                                    </div>
-                                    <div class="bouton_plat__info_texte">
-                                        <p class="text-15-ligth">Au piment d'Espelette</p>
-                                        <p class="text-15-bold">25<span class="euro">€</span></p>
-                                    </div>
-                                </div>
-                                <div class="bouton_plat__bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
-                                </div>
+                    <div class="menu-entrees-plats-desserts">
+                        <section class="menu_entrees">
+                            <div class="section_menu__sous-titre text-16-ligth">
+                                <p>Entrées</p>
                             </div>
-                        </article>
-                        <article class="section_menu__bouton_plat">
-                            <div class="bouton_plat__bloc">
-                                <div class="bouton_plat__infos">
-                                    <div class="bouton_plat__titre">
+                            <article class="section_menu__bouton_plat">
+                                <div class="bouton_plat__bloc">
+                                    <div class="bouton_plat__infos">
+                                        <h4>Fricassée d'escargotsFricassée d'escargotsFricassée d'escargots</h4>
+                                        <div class="bouton_plat__info_texte">
+                                            <p class="text-15-ligth">Au piment d'Espelette</p>
+                                            <p class="text-15-bold">25<span class="euro">€</span></p>
+                                        </div>
+                                    </div>
+                                    <div class="bouton_plat__bloc_check">
+                                        <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="section_menu__bouton_plat">
+                                <div class="bouton_plat__bloc">
+                                    <div class="bouton_plat__infos">
                                         <h4>Foie gras de canard mi-cuit</h4>
+                                        <div class="bouton_plat__info_texte">
+                                            <p class="text-15-ligth">Et ses copeaux de truffe noire</p>
+                                            <p class="text-15-bold">35<span class="euro">€</span></p>
+                                        </div>
                                     </div>
-                                    <div class="bouton_plat__info_texte">
-                                        <p class="text-15-ligth">Et ses copeaux de truffe noire</p>
-                                        <p class="text-15-bold">35<span class="euro">€</span></p>
+                                    <div class="bouton_plat__bloc_check">
+                                        <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
                                     </div>
                                 </div>
-                                <div class="bouton_plat__bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="section_menu__bouton_plat">
-                            <div class="bouton_plat__bloc">
-                                <div class="bouton_plat__infos">
-                                    <div class="bouton_plat__titre">
+                            </article>
+                            <article class="section_menu__bouton_plat">
+                                <div class="bouton_plat__bloc">
+                                    <div class="bouton_plat__infos">
                                         <h4>Œuf au plat</h4>
+                                        <div class="bouton_plat__info_texte">
+                                            <p class="text-15-ligth">Assaisonné à la truffe sur lit de caviar</p>
+                                            <p class="text-15-bold">20<span class="euro">€</span></p>
+                                        </div>
                                     </div>
-                                    <div class="bouton_plat__info_texte">
-                                        <p class="text-15-ligth">Assaisonné à la truffe sur lit de caviar</p>
-                                        <p class="text-15-bold">20<span class="euro">€</span></p>
+                                    <div class="bouton_plat__bloc_check">
+                                        <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
                                     </div>
                                 </div>
-                                <div class="bouton_plat__bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
-                                </div>
+                            </article>
+                        </section>
+                        <section class="menu_plats_principaux">
+                            <div class="section_menu__sous-titre text-16-ligth">
+                                <p>Plats</p>
                             </div>
-                        </article>
-                    </section>
-                    <section class="menu_plats_principaux">
-                        <div class="section_menu__sous-titre text-16-ligth">
-                            <p>Plats</p>
-                        </div>
-                        <article class="section_menu__bouton_plat">
-                            <div class="bouton_plat__bloc">
-                                <div class="bouton_plat__infos">
-                                    <div class="bouton_plat__titre">
+                            <article class="section_menu__bouton_plat">
+                                <div class="bouton_plat__bloc">
+                                    <div class="bouton_plat__infos">
                                         <h4>Filet de bœuf aux herbes</h4>
+                                        <div class="bouton_plat__info_texte">
+                                            <p class="text-15-ligth">Accompagné de sa ribambelle de légumes</p>
+                                            <p class="text-15-bold">40<span class="euro">€</span></p>
+                                        </div>
                                     </div>
-                                    <div class="bouton_plat__info_texte">
-                                        <p class="text-15-ligth">Accompagné de sa ribambelle de légumes</p>
-                                        <p class="text-15-bold">40<span class="euro">€</span></p>
+                                    <div class="bouton_plat__bloc_check">
+                                        <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
                                     </div>
                                 </div>
-                                <div class="bouton_plat__bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="section_menu__bouton_plat">
-                            <div class="bouton_plat__bloc">
-                                <div class="bouton_plat__infos">
-                                    <div class="bouton_plat__titre">
+                            </article>
+                            <article class="section_menu__bouton_plat">
+                                <div class="bouton_plat__bloc">
+                                    <div class="bouton_plat__infos">
                                         <h4>Parmentier de queue de bœuf</h4>
+                                        <div class="bouton_plat__info_texte">
+                                            <p class="text-15-ligth">À la truffe noire sur sa purée de panais</p>
+                                            <p class="text-15-bold">35<span class="euro">€</span></p>
+                                        </div>
                                     </div>
-                                    <div class="bouton_plat__info_texte">
-                                        <p class="text-15-ligth">À la truffe noire sur sa purée de panais</p>
-                                        <p class="text-15-bold">35<span class="euro">€</span></p>
+                                    <div class="bouton_plat__bloc_check">
+                                        <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
                                     </div>
                                 </div>
-                                <div class="bouton_plat__bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="section_menu__bouton_plat">
-                            <div class="bouton_plat__bloc">
-                                <div class="bouton_plat__infos">
-                                    <div class="bouton_plat__titre">
+                            </article>
+                            <article class="section_menu__bouton_plat">
+                                <div class="bouton_plat__bloc">
+                                    <div class="bouton_plat__infos">
                                         <h4>Filet de turbot</h4>
+                                        <div class="bouton_plat__info_texte">
+                                            <p class="text-15-ligth">Aux agrumes</p>
+                                            <p class="text-15-bold">44<span class="euro">€</span></p>
+                                        </div>
                                     </div>
-                                    <div class="bouton_plat__info_texte">
-                                        <p class="text-15-ligth">Aux agrumes</p>
-                                        <p class="text-15-bold">44<span class="euro">€</span></p>
+                                    <div class="bouton_plat__bloc_check">
+                                        <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
                                     </div>
                                 </div>
-                                <div class="bouton_plat__bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
-                                </div>
+                            </article>
+                        </section>
+                        <section class="menu_desserts">
+                            <div class="section_menu__sous-titre text-16-ligth">
+                                <p>Desserts</p>
                             </div>
-                        </article>
-                    </section>
-                    <section class="menu_desserts">
-                        <div class="section_menu__sous-titre text-16-ligth">
-                            <p>Desserts</p>
-                        </div>
-                        <article class="section_menu__bouton_plat">
-                            <div class="bouton_plat__bloc">
-                                <div class="bouton_plat__infos">
-                                    <div class="bouton_plat__titre">
+                            <article class="section_menu__bouton_plat">
+                                <div class="bouton_plat__bloc">
+                                    <div class="bouton_plat__infos">
                                         <h4>Paris-Brest</h4>
+                                        <div class="bouton_plat__info_texte">
+                                            <p class="text-15-ligth">Revisité</p>
+                                            <p class="text-15-bold">18<span class="euro">€</span></p>
+                                        </div>
                                     </div>
-                                    <div class="bouton_plat__info_texte">
-                                        <p class="text-15-ligth">Revisité</p>
-                                        <p class="text-15-bold">18<span class="euro">€</span></p>
+                                    <div class="bouton_plat__bloc_check">
+                                        <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
                                     </div>
                                 </div>
-                                <div class="bouton_plat__bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="section_menu__bouton_plat">
-                            <div class="bouton_plat__bloc">
-                                <div class="bouton_plat__infos">
-                                    <div class="bouton_plat__titre">
+                            </article>
+                            <article class="section_menu__bouton_plat">
+                                <div class="bouton_plat__bloc">
+                                    <div class="bouton_plat__infos">
                                         <h4>Macaron au chocolat d'exception</h4>
+                                        <div class="bouton_plat__info_texte">
+                                            <p class="text-15-ligth">Et glace à la vanille de Madagascar</p>
+                                            <p class="text-15-bold">22<span class="euro">€</span></p>
+                                        </div>
                                     </div>
-                                    <div class="bouton_plat__info_texte">
-                                        <p class="text-15-ligth">Et glace à la vanille de Madagascar</p>
-                                        <p class="text-15-bold">22<span class="euro">€</span></p>
+                                    <div class="bouton_plat__bloc_check">
+                                        <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
                                     </div>
                                 </div>
-                                <div class="bouton_plat__bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="section_menu__bouton_plat">
-                            <div class="bouton_plat__bloc">
-                                <div class="bouton_plat__infos">
-                                    <div class="bouton_plat__titre">
+                            </article>
+                            <article class="section_menu__bouton_plat">
+                                <div class="bouton_plat__bloc">
+                                    <div class="bouton_plat__infos">
                                         <h4>Mousse au chocolat</h4>
+                                        <div class="bouton_plat__info_texte">
+                                            <p class="text-15-ligth">Au piment d'Espelette et à la truffe noire</p>
+                                            <p class="text-15-bold">23<span class="euro">€</span></p>
+                                        </div>
                                     </div>
-                                    <div class="bouton_plat__info_texte">
-                                        <p class="text-15-ligth">Au piment d'Espelette et à la truffe noire</p>
-                                        <p class="text-15-bold">23<span class="euro">€</span></p>
+                                    <div class="bouton_plat__bloc_check">
+                                        <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
                                     </div>
                                 </div>
-                                <div class="bouton_plat__bloc_check">
-                                    <i class="fa-solid fa-check fa-sm bouton_plat__logo_check"></i>
-                                </div>
-                            </div>
-                        </article>
-                    </section>
+                            </article>
+                        </section>
+                        <a class="bouton__commander text-16-medium" href="">Commander</a>
+                    </div>
                 </div>
             </div>
         </div>
