ohmyffod-reste-3 pages restaurants

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
 <!--***** BLOC RESDTAURANTS ***** -->
         <div class="restaurants" id="Nos_restaurants">
-            <section class="section_restaurants" id="restaurants">
+            <section class="section_restaurants">
                 <h3 class="section_restaurants__titre">Restaurants</h3>
                 <div class="section_restaurants_cartes">
                     <article class="carte_restaurant">
