--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -40,7 +40,7 @@
                             <article class="section_menu__bouton_plat">
                                 <div class="bouton_plat__bloc">
                                     <div class="bouton_plat__infos">
-                                        <h4>Fricassée d'escargotsFricassée d'escargotsFricassée d'escargots</h4>
+                                        <h4>Fricassée d'escargots</h4>
                                         <div class="bouton_plat__info_texte">
                                             <p class="text-15-ligth">Au piment d'Espelette</p>
                                             <p class="text-15-bold">25<span class="euro">€</span></p>
