--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
         <div class="contain_loader">
             <div class="loader"></div>
-            <div class="tour-eiffel"><img src="images/logo/tour-eiffel.png" class="tour-eiffel"></div>
+            <div class="tour-eiffel"><img src="images/logo/tour-eiffel.png" class="tour-eiffel" alt="icone de la tour eiffel"></div>
         </div>
 <!-- ENTETE -->
     <header>
@@ -72,7 +72,7 @@
                     <article class="carte_restaurant">
                         <a class="carte_restaurant__lien" href="menu-la-palette-du-gout.html">
                             <div class="carte_restaurant__nouveau">
-                                <p class=>Nouveau</p>
+                                <p>Nouveau</p>
                             </div>
                             <img class="carte_restaurant__image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'un plat du restaurant la palette du gout">
                             <div class="carte_restaurant_bas">
@@ -88,7 +88,7 @@
                     <article class="carte_restaurant">
                         <a class=".section_restaurants_cartes__lien" href="menu-la-note-enchantee.html">
                             <div class="carte_restaurant__nouveau">
-                                <p class=>Nouveau</p>
+                                <p>Nouveau</p>
                             </div>
                             <img class="carte_restaurant__image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'un plat du restaurant la note enchantée">
                             <div class="carte_restaurant_bas">
@@ -105,7 +105,7 @@
                 <div class="section_restaurants_cartes">
                     <article class="carte_restaurant">
                         <a class=".section_restaurants_cartes__lien" href="menu-a-la-française.html">
-                            <img class="carte_restaurant__image"src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'un plat du restaurant à la française">
+                            <img class="carte_restaurant__image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'un plat du restaurant à la française">
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">À la française</h3>
                                 <p class="carte_restaurant_bas__lieu">Cité Rouge</p>
