ohmyffod-reste-3 pages loader ok

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 <body>
         <div class="contain_loader">
-            <div class="loader"></div>
+            <div class="loader">
             <div class="tour-eiffel"><img src="images/logo/tour-eiffel.png" class="tour-eiffel" alt="icone de la tour eiffel"></div>
+        </div>
         </div>
 <!-- ENTETE -->
     <header>
