ohmyffod-3 menus a faire

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     </header>
     <main>
         <form class="localisation" autocomplete="off">
-            <span class="fa-solid fa-location-dot fa-lg"></span>
+            <a class="fa-solid fa-location-dot fa-lg" href=""></a>
             <input type="text" placeholder="Paris, Belleville" class="localisation__input">
         </form>
         <div class="entete_restaurants">
             <h2 class="entete_restaurant__titre">Réservez le menu qui vous convient</h2>
             <p class="text-18-ligth">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-            <a class="bouton__explorez text-16-medium" href="#Nos_restaurants">Explorer nos restaurants</a>
+            <a class="bouton__explorez text-16-medium" href="#Nos_restaurants">Explorez nos restaurants</a>
         </div>
 <!--***** BLOC FONCTIONNEMENT ***** -->
         <div class="fonctionnement">
@@ -46,7 +46,7 @@
                     <p class="fonctionnement_bar_etape__nombre">1</p>
                     <div class="fonctionnement_bar_etape__bouton">
                         <i class="fa-solid fa-mobile-screen-button fonctionnement_bar_etape_bouton__logo"></i>
-                        <p class="fonctionnement_bar_etape_bouton__texte">Choississez un restaurant</p>
+                        <p class="fonctionnement_bar_etape_bouton__texte">Choisissez un restaurant</p>
                     </div>
                 </div>
                 <div class="fonctionnement_bar_etape">
@@ -144,7 +144,7 @@
                 </a>
                 <a class="footer__lien" href="">
                     <i class="fa-solid fa-handshake-angle fa-xs footer__lien__icone"></i>
-                    <p class="footer__lien__texte">Devenez partenaire</p>
+                    <p class="footer__lien__texte">Devenir partenaire</p>
                 </a>
                 <a class="footer__lien footer__txt_ss_logo" href="">Mentions légales</a>
                 <a class="footer__lien" href="mailto:avotreecoute@ohmyfood.fr">Contact</a>
