--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -194,7 +194,7 @@
                 </a>
                 <a class="footer__lien" href="">
                     <i class="fa-solid fa-handshake-angle fa-xs footer__lien__icone"></i>
-                    <p class="footer__lien__texte">Devenez partenaire</p>
+                    <p class="footer__lien__texte">Devenir partenaire</p>
                 </a>
                 <a class="footer__lien footer__txt_ss_logo" href="">Mentions légales</a>
                 <a class="footer__lien" href="mailto:avotreecoute@ohmyfood.fr">Contact</a>
