ohmyffod-repertoire-asssets

--- a/restaurants/menu-la-palette-du-gout.html
+++ b/restaurants/menu-la-palette-du-gout.html
@@ -13,21 +13,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
     <!-- ENTETE -->
     <header>
         <nav class="navbar">
-            <a href="index.html?pageretour=menu" class="navbar__bouton-retour"><i
-                    class="fa-solid fa-arrow-left fa-lg"></i></a>
-            <img class="entete__logo" src="images/logo/ohmyfood.png" alt="Logo OhMyFood">
+            <a href="../index.html" class="navbar__bouton-retour"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
+            <img class="entete__logo" src="../assets/images/logo/ohmyfood.png" alt="Logo OhMyFood">
         </nav>
     </header>
     <main>
         <div class="bloc_menu">
-            <img class="menu__image_plat_restaurant" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            <img class="menu__image_plat_restaurant" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="Photo d'un plat du restaurant la palette du gout">
             <div class="menu">
                 <div class="menu_titre">
