--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
         <div class="contain_loader">
             <div class="loader">
-            <div class="tour-eiffel"><img src="images/logo/tour-eiffel.png" class="tour-eiffel" alt="icone de la tour eiffel"></div>
+            <div class="tour-eiffel"><img src="assets/images/logo/tour-eiffel.png" class="tour-eiffel" alt="icone de la tour eiffel"></div>
         </div>
         </div>
 <!-- ENTETE -->
     <header>
         <nav class="navbar">
             <a href="../index.html" class="navbar__bouton-retour hide_page_index"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
-            <img class="entete__logo" src="images/logo/ohmyfood.png" alt="Logo OhMyFood">
+            <img class="entete__logo" src="assets/images/logo/ohmyfood.png" alt="Logo OhMyFood">
         </nav>
     </header>
     <main>
@@ -71,11 +71,11 @@
                 <h3 class="section_restaurants__titre">Restaurants</h3>
                 <div class="section_restaurants_cartes">
                     <article class="carte_restaurant">
-                        <a class="carte_restaurant__lien" href="menu-la-palette-du-gout.html">
+                        <a class="carte_restaurant__lien" href="./restaurants/menu-la-palette-du-gout.html">
                             <div class="carte_restaurant__nouveau">
                                 <p>Nouveau</p>
                             </div>
-                            <img class="carte_restaurant__image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'un plat du restaurant la palette du gout">
+                            <img class="carte_restaurant__image" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'un plat du restaurant la palette du gout">
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">La palette du goût</h3>
                                 <p class="carte_restaurant_bas__lieu">Ménilmontant</p>
@@ -87,11 +87,11 @@
                         </div>
                     </article>
                     <article class="carte_restaurant">
-                        <a class=".section_restaurants_cartes__lien" href="menu-la-note-enchantee.html">
+                        <a class=".section_restaurants_cartes__lien" href="./restaurants/menu-la-note-enchantee.html">
                             <div class="carte_restaurant__nouveau">
                                 <p>Nouveau</p>
                             </div>
-                            <img class="carte_restaurant__image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'un plat du restaurant la note enchantée">
+                            <img class="carte_restaurant__image" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'un plat du restaurant la note enchantée">
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">La note enchantée</h3>
                                 <p class="carte_restaurant_bas__lieu">Charonne</p>
@@ -105,8 +105,8 @@
                 </div>
                 <div class="section_restaurants_cartes">
                     <article class="carte_restaurant">
-                        <a class=".section_restaurants_cartes__lien" href="menu-a-la-française.html">
-                            <img class="carte_restaurant__image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'un plat du restaurant à la française">
+                        <a class=".section_restaurants_cartes__lien" href="./restaurants/menu-a-la-française.html">
+                            <img class="carte_restaurant__image" src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'un plat du restaurant à la française">
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">À la française</h3>
                                 <p class="carte_restaurant_bas__lieu">Cité Rouge</p>
@@ -118,8 +118,8 @@
                         </div>
                     </article>
                     <article class="carte_restaurant">
-                        <a class=".section_restaurants_cartes__lien" href="menu-delice-des-sens.html">
-                            <img class="carte_restaurant__image" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'un plat du restaurant le délice des sens">
+                        <a class=".section_restaurants_cartes__lien" href="./restaurants/menu-delice-des-sens.html">
+                            <img class="carte_restaurant__image" src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'un plat du restaurant le délice des sens">
                             <div class="carte_restaurant_bas">
                                 <h3 class="carte_restaurant_bas__nom">Le délice des sens</h3>
                                 <p class="carte_restaurant_bas__lieu">Folie-Méricourt</p>
